--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS105 Demo Page</title>
+    <title>My First Website</title>
 </head>
 <body>
-    <h2>This is CS 105 Demo Page</h2>
-    <H3>This is H3 Size</H3>
-    <h5>This is H5 Size</h5>
-    <img src="dogmeme.jpg" alt="dogmeme">
+    <h1>My first Webite</h1>
+    <h2>An HTML Playground</h2>
+    
+    This is my first webite and I'm <b>extremely excited!!!!!!</b>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    
 </body>
 </html>
