--- a/circle.html
+++ b/circle.html
@@ -7,6 +7,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js"></script>
 </head>
 <body>
+     <h1> CS 105 Class Demo: Circle Page</h1>
+   <a href="../index.html"> Go Back Home <img src="left arrow.png" alt="link tutorial" style="width: 100px ; height:50px"></a>
     <script defer type="text/javascript" src="./circle2.js"></script>
 </body>
 </html>
