--- a/circle.html
+++ b/circle.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <h1> CS 105 Class Demo: Circle Page</h1>
-   <a href="../index.html"> Go Back Home <img src="left arrow.png" alt="link tutorial" style="width: 100px ; height:50px"></a>
+   <a href="../index.html"> Go Back Home <img src="Left Arrow.jpg" alt="link tutorial" style="width: 100px ; height:50px"></a>
     <script defer type="text/javascript" src="./circle2.js"></script>
 </body>
 </html>
