--- a/index.html
+++ b/index.html
@@ -4,77 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first website</title>
+    <title>CS105</title>
 </head>
 <body>
-    <h1>My first Webite</h1>
-    <h2>An HTML Playground</h2>
-<h3>An HTML Playground</h3>    
-<h4>An HTML Playground</h4>
-<h5>An HTML Playground</h5>
-<h6>An HTML Playground</h6>
-    This is my first webite and I'm <b>extremely excited!!!!!!</b>
-    <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p> 
-
-    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-    </p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing. <br><br><br><br><br> <b>Etiam congue nec libero et mattis.</b><br> <i>Phasellus iaculis semper ullamcorper.</i><br> <u>Morbi maximus iaculis tortor, id fermentum lectus tincidunt gravida.</u><br> <em>Cras nec volutpat neque.</em><br> <strong>Fusce euismod egestas bibendum.</strong><br>
-    <hr>
-    Duis luctus faucibus nisi in rhoncus. <a href="https://www.Google.com" target="_blank">Pellentesque at risus blandit, cursus nunc id, pellentesque turpis.</a> Sed nec egestas nisi, tincidunt finibus urna. Aliquam sit amet maximus ante, non rhoncus nunc. Sed sollicitudin nibh sit amet purus lobortis, non hendrerit ligula consectetur. Fusce fermentum dapibus nisl et venenatis. Fusce et vulputate purus. Nunc velit orci, imperdiet vel eros at, rhoncus interdum orci.
-    <br>
-    <img src="600x300.png" border="10">
-    <ul>
-        <li>Apples
-            <ul>
-                <li>Golden Delicious</li>
-                <li>Granny Smith</li>
-                <li>Gala</li>
-            </ul>
-        </li>
-        <li>Oranges</li>
-        <li>Pineapples</li>
-        <li>Mangoes</li>
-        <li>Dragonfruit</li>
-    </ul>
-    <table border="10" cellpadding="10" cellspacing="0">
-        <tr>
-            <th></th>
-            <th>Month</th>
-            <th>Rent</th>
-            <th colspan="2">Utilites</th>
-            <th>Groceries</th>
-            <th>Eating Out</th>
-            <th>Entertainment</th>
-        </tr>
-        <tr>
-            <td rowspan="3">Fall</td>
-            <td>June</td>
-            <td>$1500</td>
-            <td>$100</td>
-            <td>$50</td>
-            <td>$350</td>
-            <td>$100</td>
-            <td>$50</td>
-        </tr>
-        <tr>
-            <td>July</td>
-            <td>$1500</td>
-            <td>$100</td>
-            <td>$50</td>
-            <td>$350</td>
-            <td>$100</td>
-            <td>$50</td>
-        </tr>
-        <tr>
-            <td>August</td>
-            <td>$1500</td>
-            <td>$100</td>
-            <td>$50</td>
-            <td>$350</td>
-            <td>$100</td>
-            <td>$50</td>
-        </tr>
-    </table>
+    <h1>CS 105 Class Demo: Index Page</h1>
+   <a href="circle.html"> Go to the Circle Page<img src="Right_Arrow.jpg" alt="Link tutorial" styles="width: 100px;height:50px;"></a>
+    
 </body>
 </html>
