--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>CS 105 Class Demo: Index Page</h1>
-   <a href="circle.html"> Go to the Circle Page<img src="Right_Arrow.jpg" alt="Link tutorial" styles="width: 100px;height:50px;"></a>
+   <a href="circle.html"> Go to the Circle Page<img src="Right Arrow.jpg" alt="Link tutorial" styles="width: 100px;height:50px;"></a>
     
 </body>
 </html>
